Add complete Docker environment setup for dev and QA
 Docker Infrastructure:
- Development environment (port 8080) with hot reload
- QA environment (port 8081) with production builds
- Separate PostgreSQL databases for each environment
- Nginx configuration for frontend serving and API proxying

 Configuration Files:
- docker-compose.dev.yml - Development environment
- docker-compose.qa.yml - QA environment
- Dockerfile.frontend - React app containerization
- laundry-api/Dockerfile - Backend API containerization
- Environment-specific .env files

 Management Scripts:
- scripts/setup.ps1 - Interactive setup wizard
- scripts/test-docker.ps1 - Docker environment testing
- scripts/start-dev.ps1 - Start development environment
- scripts/start-qa.ps1 - Start QA environment
- scripts/stop-all.ps1 - Stop all environments
- scripts/reset-*-db.ps1 - Database reset scripts

 Documentation:
- DOCKER-README.md - Comprehensive Docker guide
- DOCKER-SETUP-GUIDE.md - Quick start guide

 Features:
- Isolated environments with separate databases
- Hot reload for development
- Production builds for QA testing
- Easy database management and resets
- Cross-platform Docker setup
- Automated container orchestration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docker:setup": "powershell -File .\\scripts\\setup.ps1",
+    "docker:test": "powershell -File .\\scripts\\test-docker.ps1",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
+    "docker:qa": "docker-compose -f docker-compose.qa.yml up --build -d",
+    "docker:stop": "docker-compose -f docker-compose.dev.yml down && docker-compose -f docker-compose.qa.yml down",
+    "docker:logs:dev": "docker-compose -f docker-compose.dev.yml logs -f",
+    "docker:logs:qa": "docker-compose -f docker-compose.qa.yml logs -f",
+    "docker:reset-dev": "docker-compose -f docker-compose.dev.yml exec backend-dev npx prisma migrate reset --force",
+    "docker:reset-qa": "docker-compose -f docker-compose.qa.yml exec backend-qa npx prisma migrate reset --force"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
