--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,18 +1,30 @@
 # Multi-stage build for React frontend
 FROM node:18-alpine as builder
 
+# Install dependencies for better caching
+RUN apk add --no-cache git
+
 WORKDIR /app
 
-# Copy package files
+# Copy package files first (better layer caching)
 COPY package*.json ./
-RUN npm ci --only=production
 
-# Copy source code and build
+# Install dependencies with cache mount
+RUN --mount=type=cache,target=/root/.npm \
+    npm ci --only=production=false --prefer-offline
+
+# Copy source code (separate layer for better caching)
 COPY . .
+
+# Build application
 RUN npm run build
 
-# Production stage
+# Production stage - smaller final image
 FROM nginx:alpine
+
+# Add non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nextjs -u 1001
 
 # Copy built files to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
@@ -20,6 +32,11 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 # Copy custom nginx config
 COPY nginx.conf /etc/nginx/nginx.conf
 
+# Set proper permissions
+RUN chown -R nextjs:nodejs /usr/share/nginx/html
+
 EXPOSE 80
+
+USER nextjs
 
 CMD ["nginx", "-g", "daemon off;"]
