--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -9,8 +9,8 @@ WORKDIR /app
 # Copy package files first (better layer caching)
 COPY package*.json ./
 
-# Install dependencies with cache mount
-RUN --mount=type=cache,target=/root/.npm \
+# Install dependencies with cache mount (Railway-compatible format)
+RUN --mount=type=cache,id=npm,target=/root/.npm \
     npm ci --only=production=false --prefer-offline
 
 # Copy source code (separate layer for better caching)
@@ -22,21 +22,18 @@ RUN npm run build
 # Production stage - smaller final image
 FROM nginx:alpine
 
-# Add non-root user for security
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nextjs -u 1001
-
 # Copy built files to nginx
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Copy custom nginx config
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Set proper permissions
-RUN chown -R nextjs:nodejs /usr/share/nginx/html
+# Create cache directories and set permissions
+RUN mkdir -p /var/cache/nginx/client_temp && \
+    chown -R nginx:nginx /var/cache/nginx && \
+    chown -R nginx:nginx /usr/share/nginx/html && \
+    chown -R nginx:nginx /etc/nginx
 
 EXPOSE 80
-
-USER nextjs
 
 CMD ["nginx", "-g", "daemon off;"]
