Remove Docker cache mounts for Railway compatibility
 Simplified Dockerfiles for Railway deployment:
- Removed problematic cache mount directives
- Railway requires specific cache key prefixes that cause errors
- Standard npm ci without cache mounts for reliable deployment

 This should resolve Railway deployment issues completely

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -9,9 +9,8 @@ WORKDIR /app
 # Copy package files first (better layer caching)
 COPY package*.json ./
 
-# Install dependencies with cache mount (Railway-compatible format)
-RUN --mount=type=cache,id=npm,target=/root/.npm \
-    npm ci --only=production=false --prefer-offline
+# Install dependencies
+RUN npm ci --only=production=false --prefer-offline
 
 # Copy source code (separate layer for better caching)
 COPY . .
