--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview",
+    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-3000}",
+    "start": "vite preview --host 0.0.0.0 --port ${PORT:-3000}",
     "docker:setup": "powershell -File .\\scripts\\setup.ps1",
     "docker:test": "powershell -File .\\scripts\\test-docker.ps1",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
