--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 VITE_API_URL=https://eqweep-laundryos-production.up.railway.app/api
 VITE_APP_TITLE=LaundryOS
 VITE_APP_VERSION=1.0.0
+NODE_ENV=production
