Add enhanced database diagnostics and error handling
- Enhanced health endpoint with database connectivity check
- Added database initialization endpoint for troubleshooting
- Improved registration error handling with specific Prisma error codes
- Added helpful error messages for database schema issues

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0 --port ${PORT:-3000}",
-    "start": "vite preview --host 0.0.0.0 --port ${PORT:-3000}",
+    "preview": "vite preview",
     "docker:setup": "powershell -File .\\scripts\\setup.ps1",
     "docker:test": "powershell -File .\\scripts\\test-docker.ps1",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
