--- a/laundry-api/package.json
+++ b/laundry-api/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "prisma generate && tsc",
-    "start": "prisma migrate deploy && node dist/server.js",
+    "start": "node scripts/init-db.js && node dist/server.js",
     "postinstall": "prisma generate",
     "deploy": "prisma migrate deploy && npm run build",
+    "init-db": "node scripts/init-db.js",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
