--- a/laundry-api/package.json
+++ b/laundry-api/package.json
@@ -8,7 +8,7 @@
     "build": "prisma generate && tsc",
     "start": "node scripts/init-db.js && node dist/server.js",
     "postinstall": "prisma generate",
-    "deploy": "prisma migrate deploy && npm run build",
+    "deploy": "prisma db push --accept-data-loss && npm run build",
     "init-db": "node scripts/init-db.js",
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
