Setup for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
+    "deploy": "npm run build && gh-pages -d dist",
     "docker:setup": "powershell -File .\\scripts\\setup.ps1",
     "docker:test": "powershell -File .\\scripts\\test-docker.ps1",
     "docker:dev": "docker-compose -f docker-compose.dev.yml up --build",
@@ -81,6 +82,7 @@
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
